test/corpus/numeric_boundary_tests.txt
========================================================================
Integer Boundary Values
========================================================================

9223372036854775807
-9223372036854775808
18446744073709551615
0x7FFFFFFFFFFFFFFF
0x8000000000000000
0xFFFFFFFFFFFFFFFF

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))

========================================================================
Floating Point Special Values
========================================================================

1.7976931348623157e+308
2.2250738585072014e-308
4.9406564584124654e-324
inf
-inf
nan

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit))

========================================================================
Radix Edge Cases
========================================================================

2r1111111111111111111111111111111111111111111111111111111111111111
36rZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
16rFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
8r777777777777777777777777777777777777
10r999999999999999999999999999999999999

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))

========================================================================
Scientific Notation Extreme Cases
========================================================================

1e-999
1e+999
1.23456789012345e-123
9.87654321098765e+456
0x1.FFFFFFFFFFFFFp+1023
0x1p-1074

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))

========================================================================
Underscore Separator Edge Cases
========================================================================

1_000_000_000_000_000_000
0x1_2_3_4_5_6_7_8_9_A_B_C_D_E_F
2r1_0_1_0_1_0_1_0_1_0_1_0_1_0_1_0
1_2_3.4_5_6e789

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))

========================================================================
Leading Zero Cases
========================================================================

01
007
0123
0x01
0X07
2r01
36r01

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))

========================================================================
Decimal Point Variations
========================================================================

123.
.123
123.456
.0
0.
1.0
1.00000000000000000000000

------------------------------------------------------------------------

(source
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit)
  (num_lit))
