test/corpus/string_buffer_advanced.txt
========================================================================
Multiline String Variations
========================================================================

"Line 1
Line 2
Line 3"

"Mixed
	Whitespace
    And Tabs"

@"Multiline
Buffer
Content"

------------------------------------------------------------------------

(source
  (str_lit)
  (str_lit)
  (buf_lit))

========================================================================
Complex Escape Sequence Combinations
========================================================================

"\x00\x01\x02\x03\x04\x05\x06\x07\x08\x09\x0A\x0B\x0C\x0D\x0E\x0F"
"\u0000\u0001\u0010\u0100\u1000\uFFFF"
"\U000000\U000001\U000010\U000100\U001000\U010000"
"Escape at end: \\"
"Multiple escapes: \\\\\\\\\\\\\\\\"
"\x41\u0041\U000041 are all 'A'"

------------------------------------------------------------------------

(source
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit))

========================================================================
Long String Content Variations
========================================================================

``Empty long string``
``Single word``
``Multiple words in long string``
``Long string with "embedded quotes"``
``Long string with `embedded backticks` (invalid in real Janet)``
```Three backticks with content```
````Four backticks with ``` inside````

------------------------------------------------------------------------

(source
  (long_str_lit)
  (long_str_lit)
  (long_str_lit)
  (long_str_lit)
  (long_str_lit)
  (long_str_lit)
  (long_str_lit))

========================================================================
Long Buffer Content Variations
========================================================================

@``Empty long buffer``
@``Single word``
@``Multiple words in long buffer``
@``Long buffer with "embedded quotes"``
@```Three backticks with buffer content```
@````Four backticks with @`` inside````

------------------------------------------------------------------------

(source
  (long_buf_lit)
  (long_buf_lit)
  (long_buf_lit)
  (long_buf_lit)
  (long_buf_lit)
  (long_buf_lit))

========================================================================
String with Only Special Characters
========================================================================

"!@#$%^&*()_+-=[]{}|;':\",./<>?"
"~`"
"\t\n\r\f\v\0\z\e"
"\"\"\"\"\"\""
"\\\\\\\\\\\\"

------------------------------------------------------------------------

(source
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit))

========================================================================
Empty and Single Character Cases
========================================================================

""
" "
"a"
"."
","
";"
":"
"/"

@""
@" "
@"a"

------------------------------------------------------------------------

(source
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (buf_lit)
  (buf_lit)
  (buf_lit))

========================================================================
Unicode String Comprehensive Test
========================================================================

"English + 中文 + العربية + русский + 日本語"
"Emoji test: 🚀🌟✨🎉🔥💯"
"Mathematical symbols: ∑∏∫∞≠≤≥±÷×"
"Currency symbols: €£¥₽₿¢"
"Arrow symbols: ←→↑↓↔⇄⇆⇔"

------------------------------------------------------------------------

(source
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit)
  (str_lit))
