test/corpus/unicode_sym_lit.txt
========================================================================
Unicode Symbol Literals
========================================================================

世界
测试符号
Ελληνικά-σύμβολο
العربية_رمز
русский_символ
符号测试

------------------------------------------------------------------------

(source
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit))

========================================================================
Mixed ASCII and Unicode Symbols
========================================================================

hello世界
test_测试_symbol
mixed-符号-test
api_接口_v1

------------------------------------------------------------------------

(source
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit))

========================================================================
Unicode Keywords
========================================================================

:世界
:测试
:Ελληνικά
:العربية
:русский

------------------------------------------------------------------------

(source
  (kwd_lit)
  (kwd_lit)
  (kwd_lit)
  (kwd_lit)
  (kwd_lit))
