test/corpus/whitespace_handling.txt
========================================================================
Various Whitespace Characters
========================================================================

a	b
a
b
a b
ab

------------------------------------------------------------------------

(source
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit)
  (sym_lit))

========================================================================
Mixed Whitespace in Structures
========================================================================

(  a	 b  
  c
)

[a	b
c]

{   :key	"value"  
  :key2   
  "value2"   }

------------------------------------------------------------------------

(source
  (par_tup_lit
    (sym_lit)
    (sym_lit)
    (sym_lit))
  (sqr_tup_lit
    (sym_lit)
    (sym_lit)
    (sym_lit))
  (struct_lit
    (kwd_lit)
    (str_lit)
    (kwd_lit)
    (str_lit)))

========================================================================
Comments with Whitespace
========================================================================

# This is a comment
a # inline comment
b
   # indented comment
c

------------------------------------------------------------------------

(source
  (comment)
  (sym_lit)
  (comment)
  (sym_lit)
  (comment)
  (sym_lit))